# dynkin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  about.html  annotated.html  dynkin_8hpp.html  files.html  index.html  modules.html  namespacedynkin.html  namespacedynkin_1_1rigidbody.html  namespaces.html  pages.html  requirements_dev.txt  searchdata-v1.js  setup.py  structdynkin_1_1Transform.html  structdynkin_1_1__Frame.html  structdynkin_1_1rigidbody_1_1RigidBody.html
.github/workflows/: ci-checks.yml  docs.yml  documentationpublish.yaml  pythonpackage.yml  pythonpublish.yml  ubuntu.yml
all/: CMakeLists.txt
cmake/: CPM.cmake
docs/source/: conf.py  index.rst
documentation/: CMakeLists.txt  Doxyfile  conf.py
dynkin/: __init__.py  euler.py  rigid_body.py
include/dynkin/: dynkin.hpp
include/dynkin/python/: dynkin.hpp
python/: CMakeLists.txt  README.md  dynkin.cpp  pyproject.toml  requirements_dev.txt  setup.py
python/dynkin/: __init__.py  frame.py  rigid_body.py
python/test/: frame_test.py  rigid_body_test.py
test/: CMakeLists.txt  rigid_body_test.py  tests.cpp
tests/: CMakeLists.txt  tests.cpp
